k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcolor-ml
spec:
  selector:
    matchLabels:
      app: webcolor-ml
  template:
    metadata:
      labels:
        app: webcolor-ml
    spec:
      containers:
      - name: webcolor
        image: fabricioveronez/web-page:blue
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webcolor-ml
spec:
  type: LoadBalancer
  selector:
    app: webcolor-ml
  ports:
  - port: 80  
    targetPort: 80
