k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webcolor
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: “true”
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: “true”
spec:
  rules:
    - host: www.demoapp.com.br
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webcolor
              port:
                name: http
